[gd_scene load_steps=3 format=3 uid="uid://55s6plo3tcxn"]

[ext_resource type="Script" uid="uid://d0qhn4qbd5mst" path="res://Scripts/interactable_object.gd" id="1_bcilo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y3klc"]
radius = 27.0

[node name="interactable_object" type="Node2D"]
script = ExtResource("1_bcilo")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_y3klc")

[node name="Text_Intreact" type="Label" parent="."]
visible = false
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -56.0
offset_right = 20.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
text = "[Z]"
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
